Address proofread feedback for hexagon task statement
The following is the raw feedback from ganweiliang:

- then perform"ing" L[i] steps "in" the chosen direction.
- simple, meaning that "every" cell
- at the beginning and "at" the end
- neither "on" the path nor inside "the path"
- A cell is said to be inside "the path" if it is not "on" the path (no comma) and ... cells using "any" sequence of steps ...
- Probably clearer for the next example to be in bullet points.
	- The cell numbered 1 is the initial, and final, cell.
	- Cells that are numbered are cells "on" the path, "numbered" in the order they are visited.
	- Cells that are shaded darker than the rest "of the cells" are cells that are inside "the path".
- consist of all cells that are "on" the path or inside "the path".

The following is the raw feedback from Pak Mushthofa:

1. Ada 3 gambar hexagon grid, masing-masing memiliki angka pada sebagian hexagon. Namun, arti
dari angka pada hexagon pada ketiga gambar tersebut berbeda semua:
    a. Pada gambar pertama, angka menunjukkan arah.
    b. Pada gambar kedua, angka menunjukkan urutan langkah.
    c. Pada gambar ketiga, angka menunjukkan score.
Menurut saya, ini bisa menjadi sumber kesalahpahaman bagi pembaca soal.
Usulan: Kita bedakan kemunculan angka-angka tersebut supaya menjadi jelas tujuan dan
perbedaannya. Misal, pada gambar pertama, kita berikan panah, sehingga jelas bahwa angka
disini menunjukkan arah. Contoh seperti ini (tolong dirapihkan)
Sedangkan gambar kedua dan ketiga dapat kita bedakan misalnya dengan membuat angka pada
salah satu gambar menjadi bold, berwarna lain, atau memberikan persegi di sekitar angkanya.

2. Kalimat terakhir halaman 1: “The cell numbered 1 is the initial cell, cells that are numbered are
cells in the path (in the order they are visited), and cells that are shaded darkerthan the rest are
cells that are inside.” → “The cell shaded red is the initial cell. The cells that are shaded light
blue are the cells in the path, whi

--- a/hexagon/statement/render/path.tex
+++ b/hexagon/statement/render/path.tex
@@ -45,22 +45,22 @@
     \node[hexapath] at (h3;3) {34};
     \node[hexapath] at (h2;4) {35};
 
-    \tikzset{hexain/.style={hexa,fill={rgb,255:red,8;green,67;blue,161},text=black}}
+    \tikzset{hexain/.style={hexa,fill={rgb,255:red,8;green,67;blue,161},text=white}}
 
-    \node[hexain] at (h3;4) {};
-    \node[hexain] at (h3;5) {};
-    \node[hexain] at (h4;4) {};
-    \node[hexain] at (h4;5) {};
-    \node[hexain] at (h4;6) {};
-    \node[hexain] at (h5;5) {};
-    \node[hexain] at (h7;2) {};
-    \node[hexain] at (h8;3) {};
-    \node[hexain] at (h9;3) {};
-    \node[hexain] at (h9;4) {};
-    \node[hexain] at (h9;5) {};
-    \node[hexain] at (h9;6) {};
-    \node[hexain] at (h9;7) {};
-    \node[hexain] at (h9;8) {};
-    \node[hexain] at (h8;8) {};
+    \node[hexain] at (h3;4) {$\times$};
+    \node[hexain] at (h3;5) {$\times$};
+    \node[hexain] at (h4;4) {$\times$};
+    \node[hexain] at (h4;5) {$\times$};
+    \node[hexain] at (h4;6) {$\times$};
+    \node[hexain] at (h5;5) {$\times$};
+    \node[hexain] at (h7;2) {$\times$};
+    \node[hexain] at (h8;3) {$\times$};
+    \node[hexain] at (h9;3) {$\times$};
+    \node[hexain] at (h9;4) {$\times$};
+    \node[hexain] at (h9;5) {$\times$};
+    \node[hexain] at (h9;6) {$\times$};
+    \node[hexain] at (h9;7) {$\times$};
+    \node[hexain] at (h9;8) {$\times$};
+    \node[hexain] at (h8;8) {$\times$};
 
 \end{tikzpicture}
