--- a/hexagon/statement/render/distances.tex
+++ b/hexagon/statement/render/distances.tex
@@ -8,67 +8,67 @@
 
     \tikzset{hexadist/.style={hexa,fill={rgb,255:red,120;green,203;blue,255}}}
     
-    \node[hexadist] at (h2;5) {0};
+    \node[hexadist] at (h2;5) {\textbf{0}};
 
-    \node[hexadist] at (h2;6) {1};
-    \node[hexadist] at (h3;5) {1};
-    \node[hexadist] at (h3;4) {1};
-    \node[hexadist] at (h2;4) {1};
+    \node[hexadist] at (h2;6) {\textbf{1}};
+    \node[hexadist] at (h3;5) {\textbf{1}};
+    \node[hexadist] at (h3;4) {\textbf{1}};
+    \node[hexadist] at (h2;4) {\textbf{1}};
 
-    \node[hexadist] at (h3;6) {2};
-    \node[hexadist] at (h4;6) {2};
-    \node[hexadist] at (h4;5) {2};
-    \node[hexadist] at (h4;4) {2};
-    \node[hexadist] at (h3;3) {2};
+    \node[hexadist] at (h3;6) {\textbf{2}};
+    \node[hexadist] at (h4;6) {\textbf{2}};
+    \node[hexadist] at (h4;5) {\textbf{2}};
+    \node[hexadist] at (h4;4) {\textbf{2}};
+    \node[hexadist] at (h3;3) {\textbf{2}};
 
-    \node[hexadist] at (h4;7) {3};
-    \node[hexadist] at (h5;6) {3};
-    \node[hexadist] at (h5;5) {3};
-    \node[hexadist] at (h5;4) {3};
-    \node[hexadist] at (h5;3) {3};
-    \node[hexadist] at (h4;3) {3};
+    \node[hexadist] at (h4;7) {\textbf{3}};
+    \node[hexadist] at (h5;6) {\textbf{3}};
+    \node[hexadist] at (h5;5) {\textbf{3}};
+    \node[hexadist] at (h5;4) {\textbf{3}};
+    \node[hexadist] at (h5;3) {\textbf{3}};
+    \node[hexadist] at (h4;3) {\textbf{3}};
     
-    \node[hexadist] at (h6;6) {4};
-    \node[hexadist] at (h6;5) {4};
-    \node[hexadist] at (h6;6) {4};
-    \node[hexadist] at (h6;3) {4};
-    \node[hexadist] at (h5;2) {4};
+    \node[hexadist] at (h6;6) {\textbf{4}};
+    \node[hexadist] at (h6;5) {\textbf{4}};
+    \node[hexadist] at (h6;6) {\textbf{4}};
+    \node[hexadist] at (h6;3) {\textbf{4}};
+    \node[hexadist] at (h5;2) {\textbf{4}};
     
-    \node[hexadist] at (h7;3) {5};
-    \node[hexadist] at (h7;2) {5};
-    \node[hexadist] at (h6;2) {5};
+    \node[hexadist] at (h7;3) {\textbf{5}};
+    \node[hexadist] at (h7;2) {\textbf{5}};
+    \node[hexadist] at (h6;2) {\textbf{5}};
 
-    \node[hexadist] at (h8;4) {6};
-    \node[hexadist] at (h8;3) {6};
-    \node[hexadist] at (h8;2) {6};
-    \node[hexadist] at (h7;1) {6};
+    \node[hexadist] at (h8;4) {\textbf{6}};
+    \node[hexadist] at (h8;3) {\textbf{6}};
+    \node[hexadist] at (h8;2) {\textbf{6}};
+    \node[hexadist] at (h7;1) {\textbf{6}};
     
-    \node[hexadist] at (h8;5) {7};
-    \node[hexadist] at (h9;4) {7};
-    \node[hexadist] at (h9;3) {7};
-    \node[hexadist] at (h9;2) {7};
+    \node[hexadist] at (h8;5) {\textbf{7}};
+    \node[hexadist] at (h9;4) {\textbf{7}};
+    \node[hexadist] at (h9;3) {\textbf{7}};
+    \node[hexadist] at (h9;2) {\textbf{7}};
     
-    \node[hexadist] at (h8;6) {8};
-    \node[hexadist] at (h9;5) {8};
-    \node[hexadist] at (h10;5) {8};
-    \node[hexadist] at (h10;4) {8};
-    \node[hexadist] at (h10;3) {8};
+    \node[hexadist] at (h8;6) {\textbf{8}};
+    \node[hexadist] at (h9;5) {\textbf{8}};
+    \node[hexadist] at (h10;5) {\textbf{8}};
+    \node[hexadist] at (h10;4) {\textbf{8}};
+    \node[hexadist] at (h10;3) {\textbf{8}};
 
-    \node[hexadist] at (h8;7) {9};
-    \node[hexadist] at (h9;6) {9};
-    \node[hexadist] at (h10;6) {9};
+    \node[hexadist] at (h8;7) {\textbf{9}};
+    \node[hexadist] at (h9;6) {\textbf{9}};
+    \node[hexadist] at (h10;6) {\textbf{9}};
     
-    \node[hexadist] at (h7;7) {10};
-    \node[hexadist] at (h8;8) {10};
-    \node[hexadist] at (h9;7) {10};
-    \node[hexadist] at (h10;7) {10};
+    \node[hexadist] at (h7;7) {\textbf{10}};
+    \node[hexadist] at (h8;8) {\textbf{10}};
+    \node[hexadist] at (h9;7) {\textbf{10}};
+    \node[hexadist] at (h10;7) {\textbf{10}};
     
-    \node[hexadist] at (h6;8) {11};
-    \node[hexadist] at (h7;8) {11};
-    \node[hexadist] at (h8;9) {11};
-    \node[hexadist] at (h9;8) {11};
-    \node[hexadist] at (h10;8) {11};
+    \node[hexadist] at (h6;8) {\textbf{11}};
+    \node[hexadist] at (h7;8) {\textbf{11}};
+    \node[hexadist] at (h8;9) {\textbf{11}};
+    \node[hexadist] at (h9;8) {\textbf{11}};
+    \node[hexadist] at (h10;8) {\textbf{11}};
     
-    \node[hexadist] at (h9;9) {12};
-    \node[hexadist] at (h10;9) {12};
+    \node[hexadist] at (h9;9) {\textbf{12}};
+    \node[hexadist] at (h10;9) {\textbf{12}};
 \end{tikzpicture}
