--- a/hexagon/statement/render/main.tex
+++ b/hexagon/statement/render/main.tex
@@ -1,3 +1,11 @@
+% Render the images using the following commands:
+%
+% pdflatex main.tex
+% convert -density 300 -background white -alpha remove -alpha off main.pdf main.png
+% mv main-0.png directions.png
+% mv main-1.png path.png
+% mv main-2.png distances.png
+
 \documentclass[tikz,border=10pt]{standalone}
 \usepackage{tikz}
 \usetikzlibrary{shapes}
