Rename hexagon images to be prefixed with hexagon- for translation system

--- a/hexagon/statement/render/main.tex
+++ b/hexagon/statement/render/main.tex
@@ -2,9 +2,9 @@
 %
 % pdflatex main.tex
 % convert -density 300 -background white -alpha remove -alpha off main.pdf main.png
-% mv main-0.png directions.png
-% mv main-1.png path.png
-% mv main-2.png distances.png
+% mv main-0.png hexagon-directions.png
+% mv main-1.png hexagon-path.png
+% mv main-2.png hexagon-distances.png
 
 \documentclass[tikz,border=10pt]{standalone}
 \usepackage{tikz}
