--- a/roads/statement/render/main.tex
+++ b/roads/statement/render/main.tex
@@ -1,3 +1,13 @@
+% Render the images using the following commands:
+%
+% pdflatex main.tex
+% convert -density 300 -background white -alpha remove -alpha off main.pdf main.png
+% mv main-0.png ../roads-1.png
+% mv main-1.png ../roads-2.png
+% cd ..
+% mogrify -resize 200x roads-1.png
+% mogrify -resize 200x roads-2.png
+
 \documentclass[tikz,border=10pt]{standalone}
 \usepackage{tikz}
 \usetikzlibrary{shapes}
